# sqrtspace-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
examples/fastapi-app/: README.md
examples/fastapi-app/app/: main.py
examples/fastapi-app/app/routers/: products.py
examples/ml-pipeline/: README.md  ml_pipeline_example.py
src/sqrtspace_spacetime/: __init__.py  config.py
src/sqrtspace_spacetime/algorithms/: __init__.py  external_groupby.py  external_sort.py
src/sqrtspace_spacetime/checkpoint/: __init__.py  decorators.py  manager.py
src/sqrtspace_spacetime/collections/: __init__.py  spacetime_array.py  spacetime_dict.py
src/sqrtspace_spacetime/memory/: __init__.py  handlers.py  monitor.py
src/sqrtspace_spacetime/ml/: __init__.py  checkpointing.py  optimizer.py
src/sqrtspace_spacetime/profiler/: __init__.py  decorators.py  profiler.py
src/sqrtspace_spacetime/streams/: __init__.py  operators.py  stream.py
tests/: __init__.py  test_external_algorithms.py  test_memory_pressure.py  test_spacetime_array.py
